--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <i class="fab fa-qq"></i>
         </div>
         <h1>加入RX(若曦)</h1>
-        <p>点击下方按钮加入我们的QQ群，或从右上角下载文件</p>
+        <p>点击下方按钮加入我们的QQ群</p>
         
         <div class="btn-container">
             <a href="https://qun.qq.com/universal-share/share?ac=1&authKey=OPJfJCXr1UugqJZXz%2F4p7LdbYwTUyOgugeTTOShJT0MMWvHtRYKX1UYEbyPF%2BjZf&busi_data=eyJncm91cENvZGUiOiIyMTU0NDg4MTMiLCJ0b2tlbiI6IjIzNEdlc1ZFdC9aZStBMzNIMlpxWU1BaHFoNzgzM2Q2QjVBYmlkU1hjbkxEK3M4cUhYN3pNVjdRaGdubkxsTm4iLCJ1aW4iOiIyMDg0NDU5NjA4In0%3D&data=oKFhQgX7xxoUGQBUSeeKQzkQ52WGheEANml_-xRt374h3pQeEFkoubcqLVKhyDXDGcCRVG86nt5TCoff9JgSPQ&svctype=4&tempid=h5_group_info" class="join-btn">
@@ -330,7 +330,7 @@
         <div class="custom-text">
             <h3>更多内容</h3>
             <div class="custom-text-content">
-                https://saneitr2.github.io/shaer/ 此页面为小游戏
+                C.P.C @Shaer
             </div>
         </div>
         
