--- a/index.html
+++ b/index.html
@@ -1013,9 +1013,21 @@
         
         <div id="newsContainer">
             <div class="news-item">
-                <h3>重要通知</h3>
-                <p class="news-content">我们之中有内鬼</p>
-                <img src="https://youke1.picui.cn/s1/2025/10/26/68fdce8325158.jpg" alt="图片" class="news-image">
+                <h3>群公告</h3>
+                <p class="news-content">RX.律师
+
+2025年10月27日 22:13
+R-C-Z车队联盟
+合作伙伴MVFYD
+RX若曦车队 启用恢复生机政策
+联盟建立现存问题与优化建议:
+1. 管理体系缺失：目前联盟仅完成初步建立，尚未搭建核心管理体系。多车队合作的核心是统一规则，没有共同的管理机制，后续协作很容易陷入混乱。
+2. 车队联络断层：三个车队未明确各自管理层的对接人，既没办法快速联系到各车队负责人员，也无法及时响应联盟内部成员的需求，导致信息传递和问题处理严重滞后。
+3. 对讲系统使用模糊：今日活动已将中国ZC车队俱乐部的对讲频道同步至各群，但未明确后续活动规则，是继续统一使用ZC车队的对讲频道，还是各车队使用独立频道、互不干扰，需要尽快确定。
+4. 环境维护责任不均：当前联盟未明确环境维护的共同责任，仅靠ZC车队单方面维持自身环境，其他车队缺乏约束，违背了联盟合作共建、维护游戏秩序的初衷，无法实现共同发展的目标。
+5. 人员招聘冲突风险：各车队虽为合作关系，但均需独立运营，且游戏内人员分布较广，若不制定统一的招聘规则，很容易出现抢人、挖人等情况，进而引发车队内战，威胁各车队的正常运行。
+中国ZC车队俱乐部管理团队工作室【发】</p>
+                <img src="https://youke1.picui.cn/s1/2025/10/28/69009b9a8b1b9.jpg" alt="图片" class="news-image">
             </div>
 
             <!-- 在这里添加新新闻 -->
